--- a/public/About_Page.html
+++ b/public/About_Page.html
@@ -13,7 +13,7 @@
             <h1>About Page</h1>
             <nav>
                 <ul>
-                    <li><a href= "Home_Page.html">Home</a></li>
+                    <li><a href= "index.html">Home</a></li>
                     <li><a href= "About_Page.html">About</a></li>
                     <li><a href= "Working_Page.html">Anime</a></li>
                 </ul>
