--- a/public/Working_Page.html
+++ b/public/Working_Page.html
@@ -15,7 +15,7 @@
 
         <nav>
             <ul>
-                <li><a href= "Home_Page.html">Home</a></li>
+                <li><a href= "index.html">Home</a></li>
                 <li><a href= "About_Page.html">About</a></li>
                 <li><a href= "Working_Page.html">Anime</a></li>
             </ul>
