--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
         </div>
     
         <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.1/annyang.min.js"></script>
-        <script src="voice.js"></script>
+        <script src="main_page.js"></script>
     </body>
 
 </html>
